--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "url": "https://github.com/jsplumb-toolkit-demonstrations/svelte-flowchart-builder/issues"
   },
   "homepage": "https://github.com/jsplumb-toolkit-demonstrations/svelte-flowchart-builder#readme",
-  "devDependencies": {
-    "svelte": "*",
+  "dependencies": {
+    "svelte": "^3.0.0",
     "@jsplumbtoolkit/browser-ui-svelte": "^5.6.0",
     "@jsplumbtoolkit/drop": "^5.6.0",
     "@jsplumbtoolkit/dialogs-2": "^5.6.0",
     "@jsplumbtoolkit/connector-editors-orthogonal": "^5.6.0",
     "@jsplumbtoolkit/browser-ui-plugin-drawing-tools": "^5.6.0",
-    "@jsplumbtoolkit/browser-ui-plugin-lasso": "^5.6.0",
+    "@jsplumbtoolkit/browser-ui-plugin-miniview": "^5.6.0",
+    "@jsplumbtoolkit/browser-ui-plugin-lasso": "^5.6.0"
+  },
+  "devDependencies": {
     "@rollup/plugin-node-resolve": "*",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup": "^2.26.11"
